--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_auth: ^4.15.2
   get: ^4.6.6
   pin_code_fields: ^8.0.1
+  cloud_firestore: ^4.13.5
 
 dev_dependencies:
   flutter_test:
